added header. inside there is h1 and p

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 <body>
 
+<header>
+  <h1>Apply to be a tree planter</h1>
 
+  <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
+</header>
 
 </body>
 </html>
