add padding around header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<header>
+<header class="island-half">
   <h1>Apply to be a tree planter</h1>
 
   <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
