added padding around h1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <header class="island-half">
-  <h1>Apply to be a tree planter</h1>
+  <h1 class="pad-top-half push-half">Apply to be a tree planter</h1>
 
   <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
 </header>
