--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="island-half">
   <h1 class="pad-top-half push-half">Apply to be a tree planter</h1>
 
-  <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
+  <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
 </header>
 
 </body>
