--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
   <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
 </header>
 
+<h2>Personal details</h2>
+
+<div class="grid">
+
+  <div class="unit">
+
+  </div>
+
+  <div class="unit">
+
+  </div>
+
+</div>
+
 </body>
 </html>
