change size of h2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="unit gutter-half pad-t-2">
 
-    <h2>Personal details</h2>
+    <h2 class="giga">Personal details</h2>
 
     <div class="grid">
 
