added label and input

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div class="grid">
 
       <div class="unit">
-
+        <label for="name">Full name</label>
+        <input id="name" name="name">
       </div>
 
       <div class="unit">
