added paragraph underneath the full name

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div class="unit">
         <label for="name">Full name</label>
         <input id="name" name="name">
+        <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
 
       <div class="unit">
