--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     <h2 class="giga">Personal details</h2>
 
-    <div class="grid">
+    <div class="grid pad-top-half">
 
       <div class="unit">
-        <label for="name">Full name</label>
+        <label for="name" class="pad-b-1-8">Full name</label>
         <input id="name" name="name">
         <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
