added italic font and change size of font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700" rel="stylesheet">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
       <div class="unit">
         <label for="name" class="pad-b-1-8">Full name</label>
         <input id="name" name="name">
-        <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+        <p class="italic micro">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
 
       <div class="unit">
