added new label and input and change the padding

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     <div class="grid pad-top-half">
 
       <div class="unit">
-        <label for="name" class="pad-b-1-8">Full name</label>
+        <label for="name" class="pad-b-1-4">Full name</label>
         <input id="name" name="name">
         <p class="italic micro">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
 
       <div class="unit">
-
+        <label for="id" class="pad-b-1-4">What should we call you?</label>
+        <input id="id" name="id">
+        <p class="italic micro">What all your friends call you, e.g. “Liz”.</p>
       </div>
 
     </div>
