delete  grid padding and change the padding for label

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     </div>
 
-    <div class="grid pad-top-half">
+    <div class="grid">
 
       <div class="unit">
-        <label for="birth" class="pad-b-1-4">Date of birth</label>
+        <label for="birth" class="pad-b-1-8">Date of birth</label>
         <input id="birth" placeholder="yyyy-mm-dd" name="birth">
       </div>
 
