--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
         <input id="birth" placeholder="yyyy-mm-dd" name="birth">
       </div>
 
+      <div class="unit">
+        <label for="size">T-shirt size</label>
+        <select id="size" placeholder="Select a t-shirt size">
+          <option>Fitted: XS</option>
+          <option>Fitted: S</option>
+          <option>Fitted: M</option>
+          <option>Fitted: L</option>
+          <option>Fitted: XL</option>
+          <option>Straight-cut: XS</option>
+          <option>Straight-cut: S</option>
+          <option>Straight-cut: M</option>
+          <option>Straight-cut: L</option>
+          <option>Straight-cut: XL</option>
+        </select>
+      </div>
+
     </div>
 
 </div>
