add the padding

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
     <div class="grid">
 
-      <div class="unit">
+      <div class="unit pad-b">
         <label for="birth" class="pad-b-1-8">Date of birth</label>
         <input id="birth" placeholder="yyyy-mm-dd" name="birth">
       </div>
 
       <div class="unit">
-        <label for="size">T-shirt size</label>
-        <select id="size" placeholder="Select a t-shirt size">
+        <label for="size" class="pad-b-1-8">T-shirt size</label>
+        <select id="size">
           <option>Fitted: XS</option>
           <option>Fitted: S</option>
           <option>Fitted: M</option>
