add sizes for each contents

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
     <div class="grid pad-top-half">
 
-      <div class="unit">
+      <div class="unit xs-1 s-1 m-1-2">
         <label for="name" class="pad-b-1-8">Full name</label>
         <input id="name" name="name">
         <p class="italic micro pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
 
-      <div class="unit">
+      <div class="unit xs-1 s-1 m-1-2">
         <label for="id" class="pad-b-1-8">What should we call you?</label>
         <input id="id" name="id">
         <p class="italic micro pad-t-1-8">What all your friends call you, e.g. “Liz”.</p>
@@ -43,12 +43,12 @@
 
     <div class="grid">
 
-      <div class="unit pad-b">
+      <div class="unit xs-1 s-1 m-1-2 pad-b">
         <label for="birth" class="pad-b-1-8">Date of birth</label>
         <input id="birth" placeholder="yyyy-mm-dd" name="birth">
       </div>
 
-      <div class="unit">
+      <div class="unit xs-1 s-1 m-1-2">
         <label for="size" class="pad-b-1-8">T-shirt size</label>
         <select id="size">
           <option>Fitted: XS</option>
@@ -63,6 +63,7 @@
           <option>Straight-cut: XL</option>
         </select>
       </div>
+
 
     </div>
 
