adjust all the padding

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
 <div class="grid">
 
-  <div class="unit gutter-half pad-t-2">
+  <div class="unit gutter-eight pad-t-2">
 
-    <h2 class="giga">Personal details</h2>
+    <h2 class="giga gutter-half">Personal details</h2>
 
-    <div class="grid pad-top-half">
+    <div class="grid">
 
-      <div class="unit xs-1 s-1 m-1-2">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="name" class="pad-b-1-8">Full name</label>
         <input id="name" name="name">
-        <p class="italic micro pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+        <p class="italic micro pad-t-1-8 push-0">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
       </div>
 
-      <div class="unit xs-1 s-1 m-1-2">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="id" class="pad-b-1-8">What should we call you?</label>
         <input id="id" name="id">
         <p class="italic micro pad-t-1-8">What all your friends call you, e.g. “Liz”.</p>
