adjust the padding

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <h2 class="giga gutter-half">Personal details</h2>
 
     <div class="grid">
-
       <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="name" class="pad-b-1-8">Full name</label>
         <input id="name" name="name">
@@ -36,19 +35,17 @@
       <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="id" class="pad-b-1-8">What should we call you?</label>
         <input id="id" name="id">
-        <p class="italic micro pad-t-1-8">What all your friends call you, e.g. “Liz”.</p>
+        <p class="italic micro pad-t-1-8 push-0">What all your friends call you, e.g. “Liz”.</p>
       </div>
-
     </div>
 
     <div class="grid">
-
-      <div class="unit xs-1 s-1 m-1-2 pad-b">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="birth" class="pad-b-1-8">Date of birth</label>
         <input id="birth" placeholder="yyyy-mm-dd" name="birth">
       </div>
 
-      <div class="unit xs-1 s-1 m-1-2">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="size" class="pad-b-1-8">T-shirt size</label>
         <select id="size">
           <option>Fitted: XS</option>
@@ -63,8 +60,6 @@
           <option>Straight-cut: XL</option>
         </select>
       </div>
-
-
     </div>
 
 </div>
