--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
       </div>
     </div>
 
+    <div class="grid">
+      <div class="unit">
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email">
+      </div>
+
+    </div>
+
 </div>
 
 </div>
