--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
 
     <div class="grid">
-      <div class="unit">
-        <label for="email">Email</label>
+      <div class="unit xs-1 s-1 m-1-2 island-half">
+        <label for="email" class="pad-b-1-8">Email</label>
         <input id="email" type="email" name="email">
       </div>
 
