added another content

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <input id="email" type="email" name="email">
       </div>
 
+      <div class="unit">
+        <label for="phone" class="pad-b-1-8">Phone number (optional)</label>
+        <input id="phone" type="phone" name="phone">
+      </div>
     </div>
 
 </div>
