--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <input id="email" type="email" name="email">
       </div>
 
-      <div class="unit">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="phone" class="pad-b-1-8">Phone number (optional)</label>
         <input id="phone" type="phone" name="phone">
       </div>
