added hr; long line

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="birth" class="pad-b-1-8">Date of birth</label>
-        <input id="birth" placeholder="yyyy-mm-dd" name="birth">
+        <input id="birth" type="date" name="birth">
       </div>
 
       <div class="unit xs-1 s-1 m-1-2 island-half">
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="grid">
+    <div class="grid push pad-b-1-4">
       <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="email" class="pad-b-1-8">Email</label>
         <input id="email" type="email" name="email">
@@ -70,9 +70,11 @@
 
       <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="phone" class="pad-b-1-8">Phone number (optional)</label>
-        <input id="phone" type="phone" name="phone">
+        <input id="phone" type="tel" name="phone">
       </div>
     </div>
+
+    <hr class="push-2">
 
 </div>
 
