added content of address

--- a/index.html
+++ b/index.html
@@ -74,7 +74,47 @@
       </div>
     </div>
 
-    <hr class="push-2">
+    <hr class="">
+
+    <h2 class="giga gutter-half">Address</h2>
+
+    <div class="grid">
+      <div class="unit">
+        <label for="address">Street address</label>
+        <input id="address" name="address">
+      </div>
+
+      <div class="unit">
+        <label for="city">City</label>
+        <input id="city" name="city">
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="unit">
+        <label for="province" class="pad-b-1-8">Province</label>
+        <select id="province">
+          <option value="">Alberta</option>
+          <option>British Columbia</option>
+          <option>Manitoba</option>
+          <option>New Brunswick</option>
+          <option>Newfoundland & Labrador</option>
+          <option>Northwest Territories</option>
+          <option>Nova Scotia</option>
+          <option>Nunavut</option>
+          <option>Ontario</option>
+          <option>Prince Edward Island</option>
+          <option>Québec</option>
+          <option>Saskatchewan</option>
+          <option>Yukon</option>
+        </select>
+      </div>
+
+      <div class="unit">
+        <label for="postal">Postal code</label>
+        <input id="postal" name="postal">
+      </div>
+    </div>
 
 </div>
 
