added css for address contents

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
     <h2 class="giga gutter-half">Address</h2>
 
     <div class="grid">
-      <div class="unit">
-        <label for="address">Street address</label>
+      <div class="unit xs-1 s-1 m-1-2 island-half">
+        <label for="address" class="pad-b-1-8">Street address</label>
         <input id="address" name="address">
       </div>
 
-      <div class="unit">
-        <label for="city">City</label>
+      <div class="unit xs-1 s-1 m-1-2 island-half">
+        <label for="city" class="pad-b-1-8">City</label>
         <input id="city" name="city">
       </div>
     </div>
 
     <div class="grid">
-      <div class="unit">
+      <div class="unit xs-1 s-1 m-1-2 island-half">
         <label for="province" class="pad-b-1-8">Province</label>
         <select id="province">
           <option value="">Alberta</option>
@@ -110,8 +110,8 @@
         </select>
       </div>
 
-      <div class="unit">
-        <label for="postal">Postal code</label>
+      <div class="unit xs-1 s-1 m-1-2 island-half">
+        <label for="postal" class="pad-b-1-8">Postal code</label>
         <input id="postal" name="postal">
       </div>
     </div>
