added checkbox content

--- a/index.html
+++ b/index.html
@@ -116,6 +116,71 @@
       </div>
     </div>
 
+    <hr>
+
+    <fieldset class="island-half">
+      <legend>What activities are you interested in helping with?</legend>
+
+      <input id="holes" type="checkbox">
+      <label for="holes"> Digging holes</label>
+
+      <input id="dirty" type="checkbox">
+      <label for="dirty">Getting dirty</label>
+
+      <input id="objects" type="checkbox">
+      <label for="objects">Lifting heavy objects</label>
+
+      <input id="driving" type="checkbox">
+      <label for="driving">Driving people</label>
+
+      <input id="trees" type="checkbox">
+      <label for="trees">Transporting trees</label>
+
+      <input id="photos" type="checkbox">
+      <label for="photos">Taking photos</label>
+
+      <input id="online" type="checkbox">
+      <label for="online">Online publishing</label>
+
+      <input id="people" type="checkbox">
+      <label for="people">Managing people</label>
+    </fieldset>
+
+    <fieldset>
+      <legend>Do you have any experience with the following?</legend>
+
+      <input id="shovels" type="checkbox">
+      <label for="shovels">Shovels</label>
+
+      <input id="hand" type="checkbox">
+      <label for="hand">Hand-held GPS</label>
+
+      <input id="writing" type="checkbox">
+      <label for="writing">Writing & blogging</label>
+
+      <input id="photography" type="checkbox">
+      <label for="photography">Photography</label>
+
+      <input id="trail" type="checkbox">
+      <label for="trail">Trail & hill climbing</label>
+
+      <input id="bush" type="checkbox">
+      <label for="bush">Bush craft</label>
+
+      <input id="aTVs" type="checkbox">
+      <label for="aTVs">ATVs</label>
+
+      <input id="plant" type="checkbox">
+      <label for="plant">Plant identification</label>
+
+      <input id="special" type="checkbox">
+      <label for="special">Special event planning</label>
+
+      <input id="speaking" type="checkbox">
+      <label for="speaking">Speaking to groups</label>
+
+    </fieldset>
+
 </div>
 
 </div>
