added radio content

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <label for="people">Managing people</label>
     </fieldset>
 
-    <fieldset>
+    <fieldset class="island-half">
       <legend>Do you have any experience with the following?</legend>
 
       <input id="shovels" type="checkbox">
@@ -167,8 +167,8 @@
       <input id="bush" type="checkbox">
       <label for="bush">Bush craft</label>
 
-      <input id="aTVs" type="checkbox">
-      <label for="aTVs">ATVs</label>
+      <input id="atvs" type="checkbox">
+      <label for="atvs">ATVs</label>
 
       <input id="plant" type="checkbox">
       <label for="plant">Plant identification</label>
@@ -179,6 +179,36 @@
       <input id="speaking" type="checkbox">
       <label for="speaking">Speaking to groups</label>
 
+    </fieldset>
+
+    <fieldset class="island-half">
+      <legend>Do you have a valid driver’s license?</legend>
+
+      <input id="yes" type="radio" name="license">
+      <label for="yes">Yes</label>
+
+      <input id="no" type="radio" name="license">
+      <label for="no">No</label>
+    </fieldset>
+
+    <fieldset class="island-half">
+      <legend>Do you have a pick-up truck you’d be willing to use?</legend>
+
+      <input id="yes01" type="radio" name="truck">
+      <label for="yes01">Yes</label>
+
+      <input id="no01" type="radio" name="truck">
+      <label for="no01">No</label>
+    </fieldset>
+
+    <fieldset class="island-half">
+      <legend>Do you have up-to-date first-aid certification?</legend>
+
+      <input id="yes02" type="radio" name="certification">
+      <label for="yes02">Yes</label>
+
+      <input id="no02" type="radio" name="certification">
+      <label for="no02">No</label>
     </fieldset>
 
 </div>
