added text content form and added button

--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
       <label for="no02">No</label>
     </fieldset>
 
+    <div class="grid">
+      <div class="unit xs-1 island-half">
+        <label for="comment">Please let us know any comments or questions you may have.</label>
+        <textarea id="comment" name="message"></textarea>
+      </div>
+    </div>
+
+      <button type="submit">Apply</button>
+
 </div>
 
 </div>
