--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
 
       <button type="submit">Apply</button>
 
+    <footer>© Tree Hugger International Organization</footer>
+
 </div>
 
 </div>
