--- a/index.html
+++ b/index.html
@@ -23,75 +23,79 @@
 
     <div class="unit gutter-eight pad-t-2">
 
-      <h2 class="giga gutter-half">Personal details</h2>
+      <fieldset>
+        <legend class="giga gutter-half pad-b-1-4">Personal details</legend>
 
-      <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="name" class="pad-b-1-8">Full name</label>
-          <input id="name" name="name">
-          <p class="italic micro pad-t-1-8 push-0">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+        <div class="grid pad-top-half">
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="name" class="pad-b-1-8">Full name</label>
+            <input id="name" name="name">
+            <p class="italic micro pad-t-1-8 push-0">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="id" class="pad-b-1-8">What should we call you?</label>
+            <input id="id" name="id">
+            <p class="italic micro pad-t-1-8 push-0">What all your friends call you, e.g. “Liz”.</p>
+          </div>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="id" class="pad-b-1-8">What should we call you?</label>
-          <input id="id" name="id">
-          <p class="italic micro pad-t-1-8 push-0">What all your friends call you, e.g. “Liz”.</p>
-        </div>
-      </div>
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="birth" class="pad-b-1-8">Date of birth</label>
+            <input id="birth" type="date" name="birth">
+          </div>
 
-      <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="birth" class="pad-b-1-8">Date of birth</label>
-          <input id="birth" type="date" name="birth">
-        </div>
-
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="size" class="pad-b-1-8">T-shirt size</label>
-          <select id="size">
-            <option>Fitted: XS</option>
-            <option>Fitted: S</option>
-            <option>Fitted: M</option>
-            <option>Fitted: L</option>
-            <option>Fitted: XL</option>
-            <option>Straight-cut: XS</option>
-            <option>Straight-cut: S</option>
-            <option>Straight-cut: M</option>
-            <option>Straight-cut: L</option>
-            <option>Straight-cut: XL</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="grid push pad-b-1-4">
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="email" class="pad-b-1-8">Email</label>
-          <input id="email" type="email" name="email">
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="size" class="pad-b-1-8">T-shirt size</label>
+            <select id="size">
+              <option>Fitted: XS</option>
+              <option>Fitted: S</option>
+              <option>Fitted: M</option>
+              <option>Fitted: L</option>
+              <option>Fitted: XL</option>
+              <option>Straight-cut: XS</option>
+              <option>Straight-cut: S</option>
+              <option>Straight-cut: M</option>
+              <option>Straight-cut: L</option>
+              <option>Straight-cut: XL</option>
+            </select>
+          </div>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 island-half">
-          <label for="phone" class="pad-b-1-8">Phone number (optional)</label>
-          <input id="phone" type="tel" name="phone">
-        </div>
-      </div>
+        <div class="grid push pad-b-1-4">
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="email" class="pad-b-1-8">Email</label>
+            <input id="email" type="email" name="email">
+          </div>
 
-      <hr class="">
+          <div class="unit xs-1 s-1 m-1-2 island-half">
+            <label for="phone" class="pad-b-1-8">Phone number (optional)</label>
+            <input id="phone" type="tel" name="phone">
+          </div>
+        </div>
+
+        <section class="gutter-half">
+            <hr>
+        </section>
+      </fieldset>
 
       <h2 class="giga gutter-half">Address</h2>
 
       <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 island-half">
+        <div class="unit xs-1 s-1 m-1-2 island-half push-1-2">
           <label for="address" class="pad-b-1-8">Street address</label>
           <input id="address" name="address">
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 island-half">
+        <div class="unit xs-1 s-1 m-1-2 island-half push-1-2">
           <label for="city" class="pad-b-1-8">City</label>
           <input id="city" name="city">
         </div>
       </div>
 
-      <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 island-half">
+      <div class="grid push pad-b">
+        <div class="unit xs-1 s-1 m-1-2 island-half push-1-2">
           <label for="province" class="pad-b-1-8">Province</label>
           <select id="province">
             <option value="">Alberta</option>
@@ -116,68 +120,73 @@
         </div>
       </div>
 
-      <hr>
+      <hr class="push-2">
 
-      <fieldset class="island-half">
-        <legend>What activities are you interested in helping with?</legend>
+      <fieldset class="grid island-quarter gutter-half ">
+        <legend class="unit giga pad-b-1-4">What activities are you interested in helping with?</legend>
 
-        <input id="holes" type="checkbox">
-        <label for="holes"> Digging holes</label>
+        <div class="unit xs-1 s-1 m-1-2 pad-0">
+          <input id="holes" type="checkbox">
+          <label for="holes" class="pad-b-1-4"> Digging holes</label>
 
-        <input id="dirty" type="checkbox">
-        <label for="dirty">Getting dirty</label>
+          <input id="dirty" type="checkbox">
+          <label for="dirty" class="pad-b-1-4">Getting dirty</label>
 
-        <input id="objects" type="checkbox">
-        <label for="objects">Lifting heavy objects</label>
+          <input id="objects" type="checkbox">
+          <label for="objects" class="pad-b-1-4">Lifting heavy objects</label>
 
-        <input id="driving" type="checkbox">
-        <label for="driving">Driving people</label>
+          <input id="driving" type="checkbox">
+          <label for="driving" class="pad-b-1-4">Driving people</label>
+        </div>
 
-        <input id="trees" type="checkbox">
-        <label for="trees">Transporting trees</label>
+        <div class="unit xs-1 s-1 m-1-2 pad-0">
+          <input id="trees" type="checkbox">
+          <label for="trees" class="pad-b-1-4">Transporting trees</label>
 
-        <input id="photos" type="checkbox">
-        <label for="photos">Taking photos</label>
+          <input id="photos" type="checkbox">
+          <label for="photos" class="pad-b-1-4">Taking photos</label>
 
-        <input id="online" type="checkbox">
-        <label for="online">Online publishing</label>
+          <input id="online" type="checkbox">
+          <label for="online" class="pad-b-1-4">Online publishing</label>
 
-        <input id="people" type="checkbox">
-        <label for="people">Managing people</label>
+          <input id="people" type="checkbox">
+          <label for="people" class="pad-b-1-4">Managing people</label>
+        </div>
+
       </fieldset>
 
-      <fieldset class="island-half">
-        <legend>Do you have any experience with the following?</legend>
+      <fieldset class="grid island-half">
+        <legend class="unit">Do you have any experience with the following?</legend>
 
         <input id="shovels" type="checkbox">
-        <label for="shovels">Shovels</label>
+        <label for="shovels" class="unit pad-b-1-8">Shovels</label>
 
         <input id="hand" type="checkbox">
-        <label for="hand">Hand-held GPS</label>
+        <label for="hand" class="unit pad-b-1-8">Hand-held GPS</label>
 
         <input id="writing" type="checkbox">
-        <label for="writing">Writing & blogging</label>
+        <label for="writing" class="unit pad-b-1-8">Writing & blogging</label>
 
         <input id="photography" type="checkbox">
-        <label for="photography">Photography</label>
+        <label for="photography" class="unit pad-b-1-8">Photography</label>
 
         <input id="trail" type="checkbox">
-        <label for="trail">Trail & hill climbing</label>
+        <label for="trail" class="unit pad-b-1-8">Trail & hill climbing</label>
 
         <input id="bush" type="checkbox">
-        <label for="bush">Bush craft</label>
+        <label for="bush" class="unit pad-b-1-8">Bush craft</label>
 
         <input id="atvs" type="checkbox">
-        <label for="atvs">ATVs</label>
+        <label for="atvs" class="unit pad-b-1-8">ATVs</label>
 
         <input id="plant" type="checkbox">
-        <label for="plant">Plant identification</label>
+        <label for="plant" class="unit pad-b-1-8">Plant identification</label>
 
         <input id="special" type="checkbox">
-        <label for="special">Special event planning</label>
+        <label for="special" class="unit pad-b-1-8">Special event planning</label>
 
         <input id="speaking" type="checkbox">
-        <label for="speaking">Speaking to groups</label>
+        <label for="speaking" class="unit pad-b-1-8">Speaking to groups</label>
 
       </fieldset>
 
@@ -218,7 +227,7 @@
         </div>
       </div>
 
-      <button type="submit">Apply</button>
+      <button type="submit" class="btn btn-ligth">Apply</button>
 
       <hr>
 
