--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         </section>
       </fieldset>
 
-      <fieldset class="island-quarter gutter-half">
-        <legend class="unit giga pad-top-quarter pad-b-1-2">What activities are you interested in helping with?</legend>
+      <fieldset class="gutter-half pad-b-1-2">
+        <legend class="giga pad-top-quarter pad-b-1-2">What activities are you interested in helping with?</legend>
 
         <div class="grid">
           <input id="holes" type="checkbox">
@@ -143,7 +143,7 @@
           <label for="driving" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Driving people</label>
         </div>
 
-        <div class="grid pad-0">
+        <div class="grid">
           <input id="trees" type="checkbox">
           <label for="trees" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Transporting trees</label>
 
@@ -159,66 +159,74 @@
 
       </fieldset>
 
-      <fieldset class="grid island-half">
-        <legend class="unit">Do you have any experience with the following?</legend>
+      <fieldset class="island-quarter gutter-half push-2">
+        <legend class="giga pad-top-half pad-b-1-4">Do you have any experience with the following?</legend>
 
-        <input id="shovels" type="checkbox">
-        <label for="shovels" class="unit pad-b-1-8">Shovels</label>
+        <div class="grid">
+          <input id="shovels" type="checkbox">
+          <label for="shovels" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Shovels</label>
 
-        <input id="hand" type="checkbox">
-        <label for="hand" class="unit pad-b-1-8">Hand-held GPS</label>
+          <input id="hand" type="checkbox">
+          <label for="hand" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Hand-held GPS</label>
 
-        <input id="writing" type="checkbox">
-        <label for="writing" class="unit pad-b-1-8">Writing & blogging</label>
+          <input id="writing" type="checkbox">
+          <label for="writing" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Writing & blogging</label>
 
-        <input id="photography" type="checkbox">
-        <label for="photography" class="unit pad-b-1-8">Photography</label>
+          <input id="photography" type="checkbox">
+          <label for="photography" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Photography</label>
 
-        <input id="trail" type="checkbox">
-        <label for="trail" class="unit pad-b-1-8">Trail & hill climbing</label>
+          <input id="trail" type="checkbox">
+          <label for="trail" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Trail & hill climbing</label>
+        </div>
 
-        <input id="bush" type="checkbox">
-        <label for="bush" class="unit pad-b-1-8">Bush craft</label>
+        <div class="grid">
+          <input id="bush" type="checkbox">
+          <label for="bush" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Bush craft</label>
 
-        <input id="atvs" type="checkbox">
-        <label for="atvs" class="unit pad-b-1-8">ATVs</label>
+          <input id="atvs" type="checkbox">
+          <label for="atvs" class="unit xs-1 s-1 m-1-2 pad-b-1-4">ATVs</label>
 
-        <input id="plant" type="checkbox">
-        <label for="plant" class="unit pad-b-1-8">Plant identification</label>
+          <input id="plant" type="checkbox">
+          <label for="plant" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Plant identification</label>
 
-        <input id="special" type="checkbox">
-        <label for="special" class="unit pad-b-1-8">Special event planning</label>
+          <input id="special" type="checkbox">
+          <label for="special" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Special event planning</label>
 
-        <input id="speaking" type="checkbox">
-        <label for="speaking" class="unit pad-b-1-8">Speaking to groups</label>
+          <input id="speaking" type="checkbox">
+          <label for="speaking" class="unit xs-1 s-1 m-1-2 pad-b-1-4">Speaking to groups</label>
+        </div>
 
       </fieldset>
 
-      <fieldset class="island-half">
-        <legend>Do you have a valid driver’s license?</legend>
+      <section class="gutter-half">
+        <hr class="push-2">
+      </section>
+
+      <fieldset class="island-half push-2">
+        <legend class="giga">Do you have a valid driver’s license?</legend>
 
         <input id="yes" type="radio" name="license">
-        <label for="yes">Yes</label>
+        <label for="yes" class="push-r">Yes</label>
 
         <input id="no" type="radio" name="license">
         <label for="no">No</label>
       </fieldset>
 
-      <fieldset class="island-half">
-        <legend>Do you have a pick-up truck you’d be willing to use?</legend>
+      <fieldset class="island-half push-2">
+        <legend class="giga">Do you have a pick-up truck you’d be willing to use?</legend>
 
         <input id="yes01" type="radio" name="truck">
-        <label for="yes01">Yes</label>
+        <label for="yes01" class="push-r">Yes</label>
 
         <input id="no01" type="radio" name="truck">
         <label for="no01">No</label>
       </fieldset>
 
       <fieldset class="island-half">
-        <legend>Do you have up-to-date first-aid certification?</legend>
+        <legend class="giga">Do you have up-to-date first-aid certification?</legend>
 
         <input id="yes02" type="radio" name="certification">
-        <label for="yes02">Yes</label>
+        <label for="yes02" class="push-r">Yes</label>
 
         <input id="no02" type="radio" name="certification">
         <label for="no02">No</label>
