--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <label for="no01">No</label>
       </fieldset>
 
-      <fieldset class="island-half">
+      <fieldset class="island-half push-2">
         <legend class="giga">Do you have up-to-date first-aid certification?</legend>
 
         <input id="yes02" type="radio" name="certification">
@@ -232,9 +232,13 @@
         <label for="no02">No</label>
       </fieldset>
 
+      <section class="gutter-half">
+        <hr class="push">
+      </section>
+
       <div class="grid">
-        <div class="unit xs-1 island-half">
-          <label for="comment">Please let us know any comments or questions you may have.</label>
+        <div class="unit xs-1 gutter-half pad-t giga">
+          <label for="comment" class="giga bold pad-b-1-2">Please let us know any comments or questions you may have.</label>
           <textarea id="comment" name="message"></textarea>
         </div>
       </div>
