--- a/index.html
+++ b/index.html
@@ -236,17 +236,21 @@
         <hr class="push">
       </section>
 
-      <div class="grid">
+      <div class="grid push-2">
         <div class="unit xs-1 gutter-half pad-t giga">
           <label for="comment" class="giga bold pad-b-1-2">Please let us know any comments or questions you may have.</label>
           <textarea id="comment" name="message"></textarea>
         </div>
       </div>
 
-      <button type="submit" class="btn btn-ligth">Apply</button>
+      <section class="gutter-half">
+        <hr class="push-2">
+      </section>
 
-      <hr>
-
+      <div class="">
+        <button class="btn btn-ligth" type="submit">Apply</button>
+      </div>
+      
       <footer>© Tree Hugger International Organization</footer>
 
     </div>
